<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- The application mName -->
    <string name="app_name">Explorer Quest - Android</string>

    <!-- Title of game, shown on start screen -->
    <string name="title" translatable="false">Explorer Quest</string>

    <!-- Character Selection title, action bar title for character selection screen -->
    <string name="activity_character_selection">Character Selection</string>

    <!-- Story title, action bar title for story screen -->
    <string name="activity_story">Story</string>

    <!-- Combat title, action bar title for story screen -->
    <string name="activity_combat">Combat</string>

    <!-- Start button text -->
    <string name="start_button">Start</string>

    <!-- Character selection text, asking user to choose character -->
    <string name="character_select">Choose a character:</string>

    <!-- Dora button text -->
    <string name="dora_button">Dora - Warrior</string>

    <!-- Boots button text -->
    <string name="boots_button">Boots - Mage</string>

    <!-- Continue button text -->
    <string name="next_button">Next</string>

    <!-- Tools text for story activity, dev use only -->
    <string name="tools_story_text" translatable="false">Story and updates shown here.</string>

    <!-- Attack button text -->
    <string name="attack_button">Attack</string>

    <!-- Magic button text -->
    <string name="magic_button">Magic</string>
	
	<!-- Health hit points label -->
	<string name="hp_label">HP</string>

    <!-- Tools text for combat activity, dev use only -->
    <string name="tools_combat_text" translatable="false">Combat actions and result shown here.</string>

    <!-- Tools text for hero stats, dev use only -->
    <string name="tools_hero_stats_text" translatable="false">Hero mName\nHealth:</string>

    <!-- Tools text for enemy stats, dev use only -->
    <string name="tools_enemy_stats_text" translatable="false">Enemy mName\nHealth:</string>"

    <!-- Tools text for character names, dev use only -->
    <string name="tools_name" translatable="false">Name</string>

    <!-- Tools text for HP, dev use only -->
    <string name="tools_health" translatable="false">100/100</string>

    <!-- Story element 1 - CHARACTER LIMIT - 130 -->
    <string name="story_intro_1"><xliff:g id="hero" example="Boots">%s</xliff:g> discovers that the pie that Abuela baked for dinner has gone missing.</string>

    <!-- Story element 2 - CHARACTER LIMIT - 130 -->
    <string name="story_intro_2"><xliff:g id="hero" example="Boots">%s</xliff:g> calls on <xliff:g id="enemy" example="Map">%s</xliff:g> to find out where to go.</string>

    <!-- Story element 3 - CHARACTER LIMIT - 130 -->
    <string name="story_intro_3"><xliff:g id="enemy" example="Map">%s</xliff:g> is suspiciously hesitant to guide <xliff:g id="hero" example="Boots">%s</xliff:g>.\n\nFrustrated <xliff:g id="hero" example="Boots">%s</xliff:g> threatens <xliff:g id="enemy" example="Map">%s</xliff:g>!</string>

    <!-- Story element 4 - CHARACTER LIMIT - 130 -->
    <string name="story_adventure_1">After defeating <xliff:g id="enemy" example="Map">%s</xliff:g>, <xliff:g id="hero" example="Boots">%s</xliff:g> finds out that <xliff:g id="enemy" example="Grumpy">%s</xliff:g> might be involved.\n\nSo <xliff:g id="hero" example="Boots">%s</xliff:g> heads to the bridge.</string>

    <!-- Story element 5 - CHARACTER LIMIT - 130 -->
    <string name="story_adventure_2"><xliff:g id="enemy" example="Grumpy">%s</xliff:g> denies knowing anything about a pie.</string>

    <!-- Story element 6 - CHARACTER LIMIT - 130 -->
    <string name="story_adventure_3"><xliff:g id="hero" example="Boots">%s</xliff:g> knows that <xliff:g id="enemy" example="Grumpy">%s</xliff:g> is usually difficult to deal with.\n\n<xliff:g id="hero" example="Boots">%s</xliff:g> threatens <xliff:g id="enemy" example="Grumpy">%s</xliff:g>!</string>

    <!-- Story element 7 - CHARACTER LIMIT - 130 -->
    <string name="story_finale_1">Defeated, <xliff:g id="enemy" example="Grumpy">%s</xliff:g>, lets slip that <xliff:g id="enemy" example="Swiper">%s</xliff:g> is behind the shenanigans.</string>

    <!-- Story element 8 - CHARACTER LIMIT - 130 -->
    <string name="story_finale_2"><xliff:g id="hero" example="Boots">%s</xliff:g> heads out towards <xliff:g id="enemy" example="Swiper">%s</xliff:g>\'s den.</string>

    <!-- Story element 9 - CHARACTER LIMIT - 130 -->
    <string name="story_finale_3"><xliff:g id="hero" example="Boots">%s</xliff:g> surprises <xliff:g id="enemy" example="Swiper">%s</xliff:g> with pie in hand.\n\n<xliff:g id="hero" example="Boots">%s</xliff:g> threatens <xliff:g id="enemy" example="Swiper">%s</xliff:g>!</string>
    
    <!-- Story element 10 - CHARACTER LIMIT - 130 -->
    <string name="story_ending"><xliff:g id="hero" example="Boots">%s</xliff:g> looms over the battered remains of <xliff:g id="enemy" example="Swiper">%s</xliff:g>.\n\n"Nobody messes with Abuela's pie." says <xliff:g id="hero" example="Boots">%s</xliff:g>.</string>

    <!-- Story element 11 - Game Over Screen if hero dies - CHARACTER LIMIT - 130 -->
    <string name="story_game_over">Our hero has fallen in battle.\n\nGAME OVER</string>

    <!-- Story element 12 - Credits/disclaimer screen at end of game - CHARACTER LIMIT - 130 -->
    <string name="story_credits">Thank you for playing.\n\n(c) 2015-2017 Brian Montijo, all rights reserved.\n\nCharacters (c) Nickelodeon, used without permission.</string>

    <!-- Combat message before user gets to attack - CHARACTER LIMIT - 40 -->
    <string name="combat_start"><xliff:g id="enemy" example="Map">%s</xliff:g> stands before you.</string>

    <!-- Combat message showing that enemy attacks first - CHARACTER LIMIT - 40 -->
    <string name="combat_start_enemy"><xliff:g id="enemy" example="Map">%s</xliff:g> attacks first!</string>

    <!-- Combat message showing user attack success - CHARACTER LIMIT - 40 -->
    <string name="combat_hero_attack_success"><xliff:g id="enemy" example="Map">%s</xliff:g> is hit for <xliff:g id="damage" example="15">%d</xliff:g> damage.</string>

    <!-- Combat message showing user attack failed - CHARACTER LIMIT - 40 -->
    <string name="combat_hero_attack_failed"><xliff:g id="enemy" example="Map">%s</xliff:g> blocked the attack.</string>

    <!-- Combat message showing enemy attack success - CHARACTER LIMIT - 40 -->
    <string name="combat_enemy_attack_success"><xliff:g id="hero" example="Boots">%s</xliff:g> is hit for <xliff:g id="damage" example="15">%d</xliff:g> damage.</string>

    <!-- Combat message showing enemy attack failed - CHARACTER LIMIT - 40 -->
    <string name="combat_enemy_attack_failed"><xliff:g id="hero" example="Boots">%s</xliff:g> blocked the attack.</string>

    <!-- Level up message - displays new stats after level up - CHARACTER LIMIT - 130 -->
    <string name="story_level_up"><xliff:g id="hero" example="Boots">%s</xliff:g> has leveled up!\nHealth: <xliff:g id="pre_health" example="0">%d</xliff:g> -> <xliff:g id="post_health" example="1">%d</xliff:g>\nAttack: <xliff:g id="pre_attack" example="0">%d</xliff:g> -> <xliff:g id="post_attack" example="1">%d</xliff:g>\nMagic: <xliff:g id="pre_magic" example="0">%d</xliff:g> -> <xliff:g id="post_magic" example="1">%d</xliff:g>\nDefense: <xliff:g id="pre_defense" example="0">%d</xliff:g> -> <xliff:g id="post_defense" example="1">%d</xliff:g>\nDamage: <xliff:g id="pre_damage" example="0">%d</xliff:g> -> <xliff:g id="post_damage" example="1">%d</xliff:g>\nMagic Damage: <xliff:g id="pre_magic_defense" example="0">%d</xliff:g> -> <xliff:g id="post_magic_defense" example="1">%d</xliff:g>\nAgility: <xliff:g id="pre_agility" example="0">%d</xliff:g> -> <xliff:g id="post_agility" example="1">%d</xliff:g>\n</string>

    <!-- Health display - informational '100/100' -->
    <string name="combat_health_display"><xliff:g id="health" example="100">%d</xliff:g>/<xliff:g id="maxHealth" example="100">%d</xliff:g></string>

</resources>
