<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_combat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.montijo.explorerquest_android.CombatActivity">

    <TextView
        android:id="@+id/text_combat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="36sp"
        tools:text="@string/tools_combat_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_hero_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_hero_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_enemy_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_enemy_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_attack"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attack_button"
            android:textAllCaps="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/buton_magic"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/magic_button"
            android:textAllCaps="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>
</LinearLayout>